[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28.1"
enumflags2 = "0.7.10"
itertools = "0.13.0"
nom = "7.1.3"
paste = "1.0.15"
rayon = "1.10.0"
smallvec = "1.13.2"
tqdm = "0.7.0"

[profile.release]
debug = true
